--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -7,9 +7,27 @@ img {
   height: 100px;
 }
 
-.title {
+.title { 
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 32px;
+
+}
+
+.info {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.box {
+  display: flex;
+  width: 200px;
+  text-align: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* do not edit this footer */
